--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,12 +3,29 @@ body {
 	line-height: 1.2;
 	font-weight: 400;
 	font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	background-color: #242424;
+	margin: 0;
+	color: #cdcdcd;
+}
+
+.header {
+	background-color: #1c1c1c;
+	padding: 20px 20px 5px 20px;
+
+	border-top: 1px solid #0d0d0d;
+	border-bottom: 1px solid #333;
+	border-width: 1px 0;
 }
 
 a {
 	color: #1e9ee0;
 	text-decoration: none;
 	background-color: transparent;
+}
+
+h1 {
+	text-align: center;
+	color: #c5c5c5;
 }
 
 h2 {
@@ -50,19 +67,23 @@ h4.number-label {
 
 #miner h4.number-label,
 #miner h2 {
-	color: #aaa;
+	color: #6d6d6d;
+}
+#miner h4.number-label {
+	max-width: 150px;
 }
 
 #miner.running h4.number-label,
 #miner.running h2 {
-	color: #555;
+	color: #aaa;
 }
 
 #mining-stats-container {
 	position: relative;
 	text-align: center;
 	height: 96px;
-	border-bottom: 1px solid #f0f0f0;
+	border-bottom: 1px solid #1d1c1c;
+
 }
 
 #mining-stats-canvas {
@@ -81,7 +102,7 @@ h4.number-label {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	padding: 32px 0;
+	padding: 22px 0;
 }
 
 #mining-start {
@@ -115,8 +136,40 @@ h4.number-label {
 
 .mining-icon .mining-stroke { stroke: #1e9ee0; }
 .mining-icon .mining-fill { fill: #1e9ee0; }
-.mining-button:hover .mining-icon .mining-stroke { stroke: #555; }
-.mining-button:hover .mining-icon .mining-fill { fill: #555; }
+.mining-button:hover .mining-icon .mining-stroke { stroke: #717171; }
+.mining-button:hover .mining-icon .mining-fill { fill: #717171; }
 
 #miner.stopped .action { color: #aaa; }
 .mining-divide { font-size: 80%; color: #eee; }
+
+#miner {
+	.row {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+	.columns {
+		margin-right: 40px;
+		flex-shrink: 1;
+		min-width: 90px;
+	}
+}
+
+#mining-stats-container {
+	max-width: 600px;
+	margin: auto;
+}
+
+#mining-usd-accumulated {
+	font-size: 1.0rem;
+	line-height: 1.25;
+	letter-spacing: 0;
+	margin-top: 10px;
+}
+
+.details {
+	max-width: 720px;
+	margin: 0 auto;
+	padding: 50px 20px 30px 20px;
+}
