--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -173,3 +173,26 @@ h4.number-label {
 	margin: 0 auto;
 	padding: 50px 20px 30px 20px;
 }
+
+.paypal {
+	margin: 0 auto;
+	padding: 5px;
+	border-radius: 3px;
+	width: 110px;
+	background-color: #393939;
+	border: 1px solid #1d1c1c;
+	-webkit-box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.3);
+	-moz-box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.3);
+	box-shadow: 1px 1px 0px 0px rgba(0,0,0,0.3);
+
+	img {
+		display: block;
+		margin: 0 auto;
+		cursor: pointer;
+		display: none;
+	}
+	input[type="image"] {
+		margin: 0 auto;
+		width: 100px;
+	}
+}
